add feature vipgroup and customer complaint

--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -106,7 +106,7 @@
         <div class="collapse navbar-collapse">
             <!-- search form! link it to your search server -->
             <div class="navbar-form navbar-left" role="search">
-            	<div th:replace="${'modules/'+module} :: ${toolbar}"></div>
+            	<div th:replace="${'modules/'+module} :: toolbar"></div>
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
