--- a/src/main/resources/templates/layout/menu.html
+++ b/src/main/resources/templates/layout/menu.html
@@ -28,9 +28,9 @@
                 </a>
                      <ul id="geo_kpi_parent" class="collapse">
                              <li> <a th:href="@{/customer-complaint}" data-no-pjax="data-no-pjax">Customer Complain</a> </li>
-                             <li> <a th:href="@{/vip-site}">VIP Site</a> </li>
-                             <li> <a th:href="@{/jalur-lebaran}">Jalur Lebaran</a> </li>
-                             <li> <a th:href="@{/event-mapping}">Event</a> </li>
+                             <li> <a th:href="@{/vip-group}" data-no-pjax="data-no-pjax">VIP Site</a> </li>
+                             <li> <a th:href="@{/jalur-lebaran}" data-no-pjax="data-no-pjax">Jalur Lebaran</a> </li>
+                             <li> <a th:href="@{/event-mapping}" data-no-pjax="data-no-pjax">Event</a> </li>
                      </ul>
            </li>
            <li>
