--- a/src/main/resources/templates/modules/customer_complaint.html
+++ b/src/main/resources/templates/modules/customer_complaint.html
@@ -206,6 +206,8 @@
 		<script type="text/javascript" th:src="@{vendor/leaflet/leafletjs/leaflet.js}"></script>
 		<script type="text/javascript" th:src="@{vendor/leaflet/bouncingmarker/leaflet.smoothmarkerbouncing.js}"></script>
 		<script type="text/javascript" th:src="@{vendor/leaflet/oms/oms.min.js}"></script>
+		<script type="text/javascript" th:src="@{${googlemap}}"></script>
+		
 
 	</div>
 	<div th:fragment="css">
